# rust_simple_invoice_app

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/errors/: invoice_errors.rs  mod.rs
src/models/: invoice.rs  invoice_line.rs  mod.rs
src/services/: accounting_services.rs  mod.rs
src/traits/: accounting_operations.rs  invoice_operations.rs  mod.rs
tests/: unit_tests.rs
tests/utils/: setup.rs
