[package]
name = "rust_invoice_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "=0.4.31", features = ["serde"] }
rand = "0.8.5"
serde = { version = "=1.0.159", features = ["derive", "std", "serde_derive"] }
serde_json = "^1.0"
uuid = { version = "=1.3.3", features = ["v4", "serde"] }
